website_styles.css
html, body {
  margin: 0;
  padding: 0;
}


body {
  font-family: Verdana,sans-serif;
  font-size: 15px;
  line-height: 1.6;
}

/*title of the page*/
.title {
  background-color:white;
  padding:20px 10px 5px 10px;
  height:60pt;
  overflow:hidden;
}

/*overall menu bar*/
.menu {
  background-color: #80ccff;
  height:60px;
  margin-right: -20pt;
  margin-left: -11pt;
  padding-top: 15px;
  width: 100%;
  position:absolute;
  box-shadow: 0 1px 5px #BEBEBE;
}


/*menu links (buttons) -----> when the mouse is not hovering*/
.menu-button:link, .menu-button:visited {
  color:white;
  padding:20px 10px 26px 10px;
  margin: 0px 20px;
  text-align: center;
  text-decoration:none;
  display:inline;
}


/*make the left most menu link to be displayed on the page*/
#left-most-button {
  margin-left:40px;
}

/* when the mouse is hovering over the link/button of the menu */
.menu-button:hover, .menu-button:active {
  background-color: white;
  color: black;
  text-decoration: none;
}

/*content for the dropdown*/
.dropdown-content {
  display:none;
  background-color: #F5F5F5;
  position: absolute;
  box-shadow:0px 8px 10px 0px #DCDCDC;
}



/*attributes for the dropdown selections*/
.dropdown-selection {
  display:block;
  text-decoration:none;
  color: black;
  padding: 12px 16px;
  position: relative;
}

/* when the dropdown selection is hovered over by the cursor*/
.dropdown-selection:hover, .dropdown-selection:active{
  background-color: #00ace6;
  color: white;
  text-decoration:none;
}



/* shows the drop down menu*/
.show {
  display:block;
}


/*allosw the dropdown selections to be aligned with the menu button*/
.hidden-align {
  position: absolute;
}

